@@ -13,6 +13,7 @@
 - Improved beamed notes grouping in non-4/4 time signatures
 - Hopefully fixed volume picker not closing when pressing escape on all platforms
 - Improved drum editor behaviour when few drums are shown
+- Removed many useless renders during song playback
 
  1.1b5
 - note beams
